--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,24 @@
+@font-face{
+  font-family: 'starwars';
+  src: url('./StarJedi-DGRW.ttf');
+}
+.title{
+  font-family: 'starwars';
+  text-align: center;
+  font-size: 3rem;
+  color: tan;
+  margin-top: 3rem;
+}
 
-
+.download{
+  text-align: center;
+  color: white;
+  margin-top: 5rem;
+  
+}
+.download:hover{
+  color: tan;
+}
 body {
 
   margin: 0;
