--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,3 +1,10 @@
 .title-nav{
     color: white;
 }
+
+
+@media only screen and (max-width: 600px){
+    .title-nav{
+        color: black;
+    }
+}
